Refactor model, storage and test classes related to contact